#210636 - IllegalStateException: Property -fx-cursor parsing error

--- a/javafx2.editor/src/org/netbeans/modules/javafx2/editor/css/javafx2.properties
+++ b/javafx2.editor/src/org/netbeans/modules/javafx2/editor/css/javafx2.properties
@@ -168,7 +168,7 @@ hsb-color=hsb ( !number , !percentage , !percentage ) | hsba ( !number , !percen
 
 # Node
 -fx-blend-mode= [ add | blue | color-burn | color-dodge | darken | difference | exclusion | green | hard-light | lighten | multiply | overlay | red | screen | soft-light | src-atop | src-in | src-out | src-over ]
--fx-cursor= [ null | crosshair | default | hand | move | e-resize | h-resize | ne-resize | nw-resize | n-resize | se-resize | sw-resize | s-resize | w-resize | v-resize | text | wait ] | <url>
+-fx-cursor= [ null | crosshair | default | hand | move | e-resize | h-resize | ne-resize | nw-resize | n-resize | se-resize | sw-resize | s-resize | w-resize | v-resize | text | wait ] | <uri>
 -fx-focus-traversable=<boolean>
 -fx-opacity=!number
 -fx-rotate=!number
