#211966 - Invalid line in CSS file marked as valid

--- a/css.lib/src/org/netbeans/modules/css/lib/Bundle.properties
+++ b/css.lib/src/org/netbeans/modules/css/lib/Bundle.properties
@@ -51,4 +51,4 @@ Templates/Other/Css3Template.css3=Empty Css3 file
 
 MSG_Error_Premature_EOF=Premature end of file
 MSG_Error_Unexpected_Token=Unexpected token {0} found
-MSG_Error_Unexpected_Char=Unexpected character {0} found
+MSG_Error_Unexpected_Char=Unexpected character(s) {0} found
