#210420 - Fix translatability issues in JavaScript area

--- a/javascript.refactoring/src/org/netbeans/modules/refactoring/javascript/ui/Bundle.properties
+++ b/javascript.refactoring/src/org/netbeans/modules/refactoring/javascript/ui/Bundle.properties
@@ -48,14 +48,13 @@ DSC_Rename=Rename <b>{0}</b> to <b>{1}</b>
 LBL_WhereUsedAction=Fi&nd Usages
 LBL_WhereUsed=Find Usages
 DSC_WhereUsed=Usages of <b>{0}</b>
-DSC_FindUsages=Usages
-DSC_WhereUsedMethodOverriders=Overriding Methods
 DSC_WhereUsedFromBaseClass=Search From Base Class
 DSC_WhereUsedFindAllSubTypes=Find All SubTypes of <b>{0}</b>
 DSC_WhereUsedFindDirectSubTypes=Find Direct SubTypes of <b>{0}</b>
 DSC_WhereUsedWarningInDevelopment=JavaScript refactoring is approximate. Review all changes.
-DSC_WhereUsedOf=of <b>{0}</b>
-DSC_And=and
+DSC_FindUsagesAndMethodOverriders=Usages and Overriding Methods of <b>{0}</b>
+DSC_MethodOverriders=Overriding Methods of <b>{0}</b>
+
 LBL_EncapsulateFieldsAction=Encapsulate &Fields...
 LBL_EncapsulateFields=Encapsulate Fields
 DSC_EncapsulateFields=Encapsulate fields in class <b>{0}</b>
