--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
@@ -272,7 +272,8 @@ LBL_PanelOptions_PreloaderName_TextBox=Project &Name:
 TXT_PanelOptions_Preloader_Project_Name=JavaFXApplication1-Preloader
 LBL_PanelOptions_Manage_Button=&Manage Platforms...
 
-WARN_PanelOptionsVisual.notFXPlatform=<html><b>Selected Java platform does not have JavaFX support.</b><br>Please create a non-default Java SE platform, then go to the JavaFX tab,<br>enable JavaFX and fill in the paths to JavaFX SDK and JavaFX RT.<br>JavaFX SDK can be downloaded from <a href='http://www.oracle.com/technetwork/java/javafx/downloads'>JavaFX website</a>.<html>
+WARN_PanelOptionsVisual.creatingDefaultFXPlatform=<html><b>No JavaFX Platform found.</b><br>Attempting to create a default JavaFX Platform automatically, please wait...<html>
+WARN_PanelOptionsVisual.notFXPlatform=<html><b>Failed to find a JavaFX Platform.</b><br>Please create a non-default Java SE platform, then go to the JavaFX tab,<br>enable JavaFX and fill in the paths to JavaFX SDK and JavaFX RT.<br>JavaFX SDK can be downloaded from <a href='http://www.oracle.com/technetwork/java/javafx/downloads'>JavaFX website</a>.<html>
 MSG_PreloaderInaccessible=<Defined Preloader Inaccessible>
 MSG_ComboNoPreloaderClassAvailable=<No Preloader Class Available>
 LBL_Platform_ComboBox=JavaFX Platform:
