--- a/extbrowser/nbproject/project.properties
+++ b/extbrowser/nbproject/project.properties
@@ -48,7 +48,5 @@ test.config.stableBTD.excludes=\
     **/ExtWebBrowserTest.class,\
     **/NbDdeBrowserImplTest.class
 
-extra.module.files=modules/ext/netbeans-ros-chrome-plugin.crx,\
-        modules/ext/netbeans-ros-firefox-plugin.xpi
+extra.module.files=modules/ext/netbeans-ros-chrome-plugin.crx
 antsrc.cp=${ant.core.lib}
-release.external/netbeans-ros-firefox-plugin.xpi=modules/ext/netbeans-ros-firefox-plugin.xpi
