--- a/extbrowser/plugins/chrome/manifest.json
+++ b/extbrowser/plugins/chrome/manifest.json
@@ -41,14 +41,15 @@
  */
 {
   "name": "NetBeans IDE Support Plugin",
-  "version": "0.3.4",
+  "version": "0.4.4",
 
   "background_page": "main.html",
 
   "permissions": [
     "contextMenus",
     "tabs",
-    "<all_urls>"
+    "<all_urls>",
+    "debugger"
   ],
 
   "icons": {
