adding new modules to build

--- a/nbbuild/cluster.properties
+++ b/nbbuild/cluster.properties
@@ -333,7 +333,7 @@ nb.cluster.ide=\
         libs.git,\
         libs.ini4j,\
         libs.jaxb,\
-        libs.json,\
+        libs.json_simple,\
         libs.jvyamlb,\
         libs.lucene,\
         libs.smack,\
@@ -423,6 +423,7 @@ nb.cluster.ide=\
 	web.browser.api,\
         web.common,\
         web.indent,\
+        web.webkit.debugging,\
         xml,\
         xml.axi,\
         xml.catalog,\
