Translatability issues fixed

--- a/php.doctrine2/src/org/netbeans/modules/php/doctrine2/annotations/orm/Bundle.properties
+++ b/php.doctrine2/src/org/netbeans/modules/php/doctrine2/annotations/orm/Bundle.properties
@@ -378,7 +378,7 @@ ManyToOneTag.documentation=<p style="font-weight: bold; font-size: 1.2em">@ManyT
 <table border="0">\
 <tr>\
     <td valign="top"><b><code>targetEntity</code></b></td>\
-    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>IMPORTANT</b>: No leading backslash!</td>\
+    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>Important</b>: No leading backslash!</td>\
 </tr>\
 </table>\n\
 <p style="font-weight: bold; font-size: 1.1em">Optional attributes</p>\
@@ -411,7 +411,7 @@ configuration values using the table and names of the two related entities.</p>\
 <table border="0">\
 <tr>\
     <td valign="top"><b><code>targetEntity</code></b></td>\
-    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>IMPORTANT</b>: No leading backslash!</td>\
+    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>Important</b>: No leading backslash!</td>\
 </tr>\
 </table>\n\
 <p style="font-weight: bold; font-size: 1.1em">Optional attributes</p>\
@@ -495,7 +495,7 @@ OneToOneTag.documentation=<p style="font-weight: bold; font-size: 1.2em">@OneToO
 <table border="0">\
 <tr>\
     <td valign="top"><b><code>targetEntity</code></b></td>\
-    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>IMPORTANT</b>: No leading backslash!</td>\
+    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>Important</b>: No leading backslash!</td>\
 </tr>\
 </table>\n\
 <p style="font-weight: bold; font-size: 1.1em">Optional attributes</p>\
@@ -531,7 +531,7 @@ OneToManyTag.documentation=<p style="font-weight: bold; font-size: 1.2em">@OneTo
 <table border="0">\
 <tr>\
     <td valign="top"><b><code>targetEntity</code></b></td>\
-    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>IMPORTANT</b>: No leading backslash!</td>\
+    <td><code>FQCN</code> of the referenced target entity. Can be the unqualified class name if both classes are in the same namespace. <b>Important</b>: No leading backslash!</td>\
 </tr>\
 </table>\n\
 <p style="font-weight: bold; font-size: 1.1em">Optional attributes</p>\
