--- a/php.symfony2/src/org/netbeans/modules/php/symfony2/ui/customizer/Bundle.properties
+++ b/php.symfony2/src/org/netbeans/modules/php/symfony2/ui/customizer/Bundle.properties
@@ -39,8 +39,8 @@
 # Portions Copyrighted 2011 Sun Microsystems, Inc.
 
 Symfony2CustomizerPanel.ignoreCacheDirectoryCheckBox.text=&Ignore "app/cache" Directory
-Symfony2CustomizerPanel.infoLabel.text=Default value can be set in
-Symfony2CustomizerPanel.optionsLabel.text=<html><a href="#">IDE Options</a></html>
+Symfony2CustomizerPanel.infoLabel.text=Default value can be set in IDE Options.
+Symfony2CustomizerPanel.optionsLabel.text=<html><a href="#">Set default value</a></html>
 Symfony2CustomizerPanel.enabledCheckBox.text=&Enabled
 Symfony2CustomizerPanel.enabledInfoLabel.text=Enable support for Symfony2 for this project
 Symfony2CustomizerPanel.appDirLabel.text=App Directory:
