Translatability issues fixed.

--- a/php.apigen/src/org/netbeans/modules/php/apigen/annotations/Bundle.properties
+++ b/php.apigen/src/org/netbeans/modules/php/apigen/annotations/Bundle.properties
@@ -1149,14 +1149,14 @@ Specify sub-package to group classes or functions and defines into. Requires <co
 If found in a page-level <code>DocBlock</code>, specifies the sub-package that all functions and defines in the php file belong to. If found in a class-level <code>DocBlock</code>, specifies the sub-package that the class belongs to.\
 </p>\
 <p>\
-If <code>@package</code> is not present in the same <code>DocBlock</code>, the <code>@subpackage</code> tag is ignored. A SUBPACKAGE NAME MUST BE ONE WORD WITH NO SPACES OR NEWLINES CONTAINING ONLY LETTERS, DIGITS, and "_", "-", "[" or "]"\
+If <code>@package</code> is not present in the same <code>DocBlock</code>, the <code>@subpackage</code> tag is ignored. A subpackage name must be one word with no spaces or newlines containing only letters, digits, and "_", "-", "[" or "]"\
 A <code>@subpackage</code> tag is applied to documented elements in the same way that <code>@package</code> is applied.\
 </p>\
 <p>\
 If a file contains functions and defines, they will be packaged by a page-level <code>DocBlock</code>. A page-level <code>DocBlock</code> is a <code>DocBlock</code> that is not paired with any <code>phpDocumentor</code> element (include, function, define, class, class function, class variable).\
 </p>\
 <p>\
-NOTE: The <code>@subpackage</code> tag is intended to help categorize the elements that are in an actual <code>@package</code> value. Since PHP itself doesn't allow you to have two functions with the same name in the same script, <code>PhpDocumentor</code> also requires all names in an <code>@package</code> to be unique... meaning, <code>@subpackage</code> does not allow further "naming separation" inside that <code>@package</code>. What it does do is allow a level of visual grouping/separation of the elements inside that <code>@package</code>.\
+Note: The <code>@subpackage</code> tag is intended to help categorize the elements that are in an actual <code>@package</code> value. Since PHP itself doesn't allow you to have two functions with the same name in the same script, <code>PhpDocumentor</code> also requires all names in an <code>@package</code> to be unique... meaning, <code>@subpackage</code> does not allow further "naming separation" inside that <code>@package</code>. What it does do is allow a level of visual grouping/separation of the elements inside that <code>@package</code>.\
 </p>\
 <p style="font-weight: bold; font-size: 1.1em">Example</p>\
 <p>\
