Issue #212275 - [T13y] String concatenation

--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/ui/Bundle.properties
@@ -161,7 +161,7 @@ LBL_FindUsagesOverridingMethods=Find Usages &and Overriding Methods
 LBL_FindAllSubtypes=Find &All Subtypes
 LBL_FindDirectSubtypesOnly=Find &Direct Subtypes Only
 LBL_SearchInComents=Search in &Comments
-WhereUsedPanelMethod.jLabel1.text=from:
+WhereUsedPanelMethod.jLabel1.text=From:
 
 # Change parameters panel
 LBL_TitleChangeParameters=Change Method Parameters
