--- a/api.search/src/org/netbeans/modules/search/Bundle.properties
+++ b/api.search/src/org/netbeans/modules/search/Bundle.properties
@@ -227,15 +227,15 @@ BasicSearchForm.cboxFileNamePattern.tooltip=(Example\: *.java, FZP??.jsp, web/**
 
 BasicSearchForm.cboxFileNamePattern.allFiles=(all files)
 
-BasicSearchForm.cbox.Replacement.AccessibleDescription=Text to replace found matches with
+BasicSearchForm.cbox.Replacement.AccessibleDescription=Text to replace found matches with.
 
 BasicSearchForm.chkWholeWords.text=&Whole Words
 
-BasicSearchForm.chkWholeWords.AccessibleDescription=If checked, matches not having word boundaries on both ends will be ignored
+BasicSearchForm.chkWholeWords.AccessibleDescription=If checked, matches not having word boundaries on both ends will be ignored.
 
 BasicSearchForm.chkCaseSensitive.text=&Match Case
 
-BasicSearchForm.chkCaseSensitive.AccessibleDescription=Whether the fulltext search should be case-sensitive
+BasicSearchForm.chkCaseSensitive.AccessibleDescription=Whether the fulltext search should be case-sensitive.
 
 BasicSearchForm.chkRegexp.text=Regular &Expression
 
@@ -243,7 +243,7 @@ BasicSearchForm.chkPreserveCase.text=Preser&ve Case when Replacing
 
 BasicSearchForm.chkPreserveCase.AccessibleDescription=Preserve case according to found instance of word.
 
-BasicSearchForm.chkRegexp.AccessibleDescription=If checked, the search pattern will be used as a regular expression
+BasicSearchForm.chkRegexp.AccessibleDescription=If checked, the search pattern will be used as a regular expression.
 
 BasicSearchForm.chkArchives.text=Search in &Archives
 
