--- a/junit/src/org/netbeans/modules/junit/Bundle.properties
+++ b/junit/src/org/netbeans/modules/junit/Bundle.properties
@@ -401,14 +401,21 @@ MSG_MISSING_TEST=The directory for tests was not found. Use source directory ins
 MSG_MISSING_TEST_TITLE=Missing Test Directory
 
 # human-readable strings for reasons to skip test creation for a class
-# The wording should match the sentence "because the class is ..."
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_OK=testable
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_Private=private
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_PkgPrivate=package-private
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_ExceptionClass=an exception class
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_NonstaticInnerClass=nonstatic nested
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_AbstractClass=abstract
+# Preceded in the UI by "The class was skipped because it is"
 TestabilityResult_TestClass=a test class
+# Preceded in the UI by "The class was skipped because it"
 TestabilityResult_NoTestableMethods=contains no testable methods
 
 # separators used between reasons in a report about skipped classes
