#212267 - browse buttons in New Empty FXML wizard should be labeled Browse...

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/Bundle.properties
@@ -323,7 +323,7 @@ ConfigureFXMLPanelVisual.locationLabel.text=&Location:
 ConfigureFXMLPanelVisual.packageLabel.text=Pac&kage:
 ConfigureFXMLPanelVisual.projectLabel.text=&Project:
 ConfigureFXMLPanelVisual.fxmlNameLabel.text=F&XML Name:
-ConfigureFXMLPanelVisual.resultLabel.text=Created &File:
+ConfigureFXMLPanelVisual.resultLabel.text=Created File:
 
 WARN_ConfigureFXMLPanel_Provide_FXML_Name=Provide valid FXML File name
 WARN_ConfigureFXMLPanel_Provide_Java_Name=Provide valid Java Controller File name
@@ -336,19 +336,38 @@ MSG_fs_is_readonly=The target folder is read-only.
 # {0} - name of the existing file
 MSG_file_already_exist=The file {0} already exists.
 MSG_file_doesnt_exist=The file {0} does not exist.
-ConfigureFXMLControllerPanelVisual.chooseButton.text=...
-ConfigureFXMLControllerPanelVisual.createNewRadioButton.text=Create &New
+ConfigureFXMLControllerPanelVisual.chooseButton.text=Bro&wse...
+ConfigureFXMLControllerPanelVisual.createNewRadioButton.text=C&reate New
 ConfigureFXMLControllerPanelVisual.useExistingRadioButton.text=Use &Existing
-ConfigureFXMLControllerPanelVisual.existingNameLabel.text=Controller Class:
-ConfigureFXMLControllerPanelVisual.createdNameLabel.text=Controller Name:
+ConfigureFXMLControllerPanelVisual.existingNameLabel.text=Controller C&lass:
+ConfigureFXMLControllerPanelVisual.createdNameLabel.text=Controller N&ame:
 ConfigureFXMLControllerPanelVisual.controllerCheckBox.text=Use Java &Controller
-ConfigureFXMLControllerPanelVisual.resultLabel.text=File &Location:
+ConfigureFXMLControllerPanelVisual.resultLabel.text=File Location:
 ConfigureFXMLCSSPanelVisual.useExistingRadioButton.text=Use &Existing
-ConfigureFXMLCSSPanelVisual.createNewRadioButton.text=Create &New
-ConfigureFXMLCSSPanelVisual.fileLabel.text=File &Location:
+ConfigureFXMLCSSPanelVisual.createNewRadioButton.text=C&reate New
+ConfigureFXMLCSSPanelVisual.fileLabel.text=File Location:
 ConfigureFXMLCSSPanelVisual.cssCheckBox.text=Use &Cascading Style Sheets
 ConfigureFXMLCSSPanelVisual.createdNameLabel.text=CSS File N&ame:
 ConfigureFXMLCSSPanelVisual.existingNameLabel.text=CSS &File:
-ConfigureFXMLCSSPanelVisual.chooseButton.text=...
+ConfigureFXMLCSSPanelVisual.chooseButton.text=Bro&wse...
 
 MSG_FXMLTemplateWizardIterator_Folder_Exists=Directory already exists: {0}
+ConfigureFXMLPanelVisual.fxmlNameLabel.AccessibleContext.accessibleDescription=Choose FXML Name
+ConfigureFXMLPanelVisual.projectLabel.AccessibleContext.accessibleDescription=Project in which FXML will be created
+ConfigureFXMLPanelVisual.locationLabel.AccessibleContext.accessibleDescription=Location in Project where FXML will be created
+ConfigureFXMLPanelVisual.packageLabel.AccessibleContext.accessibleDescription=Package in Project where FXML will be created
+ConfigureFXMLPanelVisual.resultLabel.AccessibleContext.accessibleDescription=Info on full path to FXML file
+ConfigureFXMLControllerPanelVisual.controllerCheckBox.AccessibleContext.accessibleDescription=Choose also the Java controller class
+ConfigureFXMLControllerPanelVisual.createNewRadioButton.AccessibleContext.accessibleDescription=Create New controller class
+ConfigureFXMLControllerPanelVisual.createdNameLabel.AccessibleContext.accessibleDescription=Choose New Controller Class name
+ConfigureFXMLControllerPanelVisual.useExistingRadioButton.AccessibleContext.accessibleDescription=Assign existing controller class to this FXML
+ConfigureFXMLControllerPanelVisual.existingNameLabel.AccessibleContext.accessibleDescription=Name of the controller class to be assigned
+ConfigureFXMLControllerPanelVisual.chooseButton.AccessibleContext.accessibleDescription=Browse for the controller class to be assigned
+ConfigureFXMLControllerPanelVisual.fileLabel.AccessibleContext.accessibleDescription=Full file name of the controller class
+ConfigureFXMLCSSPanelVisual.cssCheckBox.AccessibleContext.accessibleDescription=Choose also the cascading style sheet for the FXML file
+ConfigureFXMLCSSPanelVisual.createNewRadioButton.AccessibleContext.accessibleDescription=Create New cascaded style sheet
+ConfigureFXMLCSSPanelVisual.createdNameLabel.AccessibleContext.accessibleDescription=Choose new cascading style sheet name
+ConfigureFXMLCSSPanelVisual.useExistingRadioButton.AccessibleContext.accessibleDescription=Use Existing cascading style sheet
+ConfigureFXMLCSSPanelVisual.existingNameLabel.AccessibleContext.accessibleDescription=Shows location of the selected cascading style sheet
+ConfigureFXMLCSSPanelVisual.chooseButton.AccessibleContext.accessibleDescription=Browse for existing cascaded style sheet
+ConfigureFXMLCSSPanelVisual.fileLabel.AccessibleContext.accessibleDescription=Full path file name of the chosen cascaded style sheet file
