--- a/db/src/org/netbeans/modules/db/explorer/Bundle.properties
+++ b/db/src/org/netbeans/modules/db/explorer/Bundle.properties
@@ -40,15 +40,21 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
+# {0} is the database URL, {1} is username, {2} is database schema name
 ConnectionNodeUniqueName={0} [{1} on {2}]
 SchemaIsNotSet=Default schema
 
 EXC_InsufficientConnInfo=insufficient information to create a connection
+# {0} is database URL, {1} is the database driver name, {2} is additional info 
 EXC_CannotEstablishConnection=Cannot establish a connection to {0} using {1} ({2})
 
+# {0} is a user provided value
 EXC_CannotOperateWith=Cannot operate with {0}
+# {0} is a user provided value
 EXC_CannotFindAsText=Cannot find as text {0}
+# {0} is a localized Java exception text
 EXC_ConnectionError=Connection error; {0}
+# {0} is a localized Java exception text
 EXC_DisconnectError=Unable to close connection, cause: {0}
 EXC_ConnectionAlreadyExists=connection already exists
 
@@ -59,34 +65,63 @@ ERR_UnableTo_Detail={0} {1}
 ERR_UnableTo_NoDetail= {0} The exception which caused this error has been logged to the message log.
 
 # Sql types
+# NOI18N
 SQL_ARRAY=ARRAY
+# NOI18N
 SQL_BIGINT=BIGINT
+# NOI18N
 SQL_BINARY=BINARY
+# NOI18N
 SQL_BIT=BIT
+# NOI18N
 SQL_BLOB=BLOB
+# NOI18N
 SQL_CHAR=CHAR
+# NOI18N
 SQL_CLOB=CLOB
+# NOI18N
 SQL_DATE=DATE
+# NOI18N
 SQL_DECIMAL=DECIMAL
+# NOI18N
 SQL_DISTINCT=DISTINCT
+# NOI18N
 SQL_DOUBLE=DOUBLE
+# NOI18N
 SQL_FLOAT=FLOAT
+# NOI18N
 SQL_INTEGER=INTEGER
+# NOI18N
 SQL_JAVA_OBJECT=JAVA_OBJECT
+# NOI18N
 SQL_LONGVARBINARY=LONGVARBINARY
+# NOI18N
 SQL_LONGVARCHAR=LONGVARCHAR
+# NOI18N
 SQL_NUMERIC=NUMERIC
+# NOI18N
 SQL_REAL=REAL
+# NOI18N
 SQL_REF=REF
+# NOI18N
 SQL_SMALLINT=SMALLINT
+# NOI18N
 SQL_TIME=TIME
+# NOI18N
 SQL_TIMESTAMP=TIMESTAMP
+# NOI18N
 SQL_TINYINT=TINYINT
+# NOI18N
 SQL_VARBINARY=VARBINARY
+# NOI18N
 SQL_VARCHAR=VARCHAR
+# NOI18N
 SQL_OTHER=OTHER
+# NOI18N
 SQL_NULL=NULL
+# NOI18N
 SQL_STRUCT=STRUCT
+# NOI18N
 SQL_UNKNOWN=UNKNOWN
 
 # DriverExtendedDeleteImpl
