--- a/db/src/org/netbeans/api/db/explorer/node/Bundle.properties
+++ b/db/src/org/netbeans/api/db/explorer/node/Bundle.properties
@@ -159,9 +159,9 @@ nullPlusNonNullIsNull=Null plus null is null
 convert=Convert
 tableCorrelationNames=Table correlation names
 differentTableCorrelationNames=Different table correlation names
-# A name of column in SQL Metadata
+# Followed by a name of a column in user's database table
 expressionsInOrderBy=Expressions in order by
-# A name of column in SQL Metadata
+# Followed by a name of a column in user's database table
 orderByUnrelated=Unrelated order by
 groupBy=Group by support
 groupByUnrelated=Unrelated group by support
