--- a/versioning.util/src/org/netbeans/modules/versioning/history/Bundle.properties
+++ b/versioning.util/src/org/netbeans/modules/versioning/history/Bundle.properties
@@ -47,8 +47,7 @@ CTL_Action_Diff = Diff
 MSG_LoadingEvents=Loading Events...
 MSG_ShowAllFiles=Show all files
 MSG_ShowLessFiles=Show less files
-MSG_ShowMore=Show more... (
-MSG_ShowMoreSuffix=)
+MSG_ShowMore=Show more...\ 
 MSG_AllRevisions=all revisions
 MSG_Show10MoreRevisions=Show 10 more revisions
 MSG_Show50MoreRevisions=Show 50 more revisions
