--- a/subversion/src/org/netbeans/modules/subversion/ui/history/Bundle.properties
+++ b/subversion/src/org/netbeans/modules/subversion/ui/history/Bundle.properties
@@ -43,8 +43,10 @@
 CTL_MenuItem_SearchHistory = Search &History...
 CTL_MenuItem_SearchHistory_Context = Search &History...
 CTL_MenuItem_SearchHistory_Context_Multiple = Search Files &History...
+# {0} - number of selected NetBeans projects
 CTL_MenuItem_SearchHistory_Projects = Search {0} Projects History...
 
+# {0} - varying title of the tab depending on the selected nodes, can be A.java, 2 Projects, etc.
 CTL_SearchHistory_Title = {0} [Search History]
 
 CTL_UseCommitMessage=&Message\:
@@ -73,22 +75,19 @@ ACSD_SearchHistoryT_Top_Component = Search History
 ACSN_Divider = Divider
 ACSD_Divider = Divider
 
-MSG_StatusSymlinkWarning = Warning: Search History does not search deleted files. See the Output window for details.
-MSG_SymlinkWarning1 = Warning: Search History will not search occurrences in deleted files due to problem in CVS server setup. 
-MSG_SymlinkWarning2 = See {0} how to work around this problem. 
-
 LBL_SearchHistory_Searching = <No Results Yet - Search in Progress...>
 LBL_SearchHistory_NoResults = <No Results - Search Not Performed>
 
 ACSN_SummaryView_List = List of found commits 
 ACSD_SummaryView_List = Flat list of found commits sorted by file name and revision number.
-CTL_SummaryView_Diff = Diff {0} and {1}
 CTL_SummaryView_DiffToPrevious = Diff to Previous Revision
 CTL_SummaryView_DiffToPreviousShort = Diff to Previous
+# {0} - revision number
 CTL_SummaryView_RollbackTo = Rollback to {0}
 CTL_SummaryView_RollbackToShort = Rollback to
 CTL_SummaryView_View = View
 CTL_SummaryView_ShowAnnotations=Show Annotations
+# {0} - filename
 CTL_Action_Opening=Opening {0}...
 CTL_SummaryView_RollbackChange = Rollback Changes
 MSG_SummaryView_RollingBackChange = Rolling Back Changes
@@ -96,16 +95,21 @@ CTL_Action_DiffTo = Diff to:
 CTL_SummaryView_Previous = Previous
 MSG_SummaryView_DeadState = (state: dead; file was removed in this revision)
 LBL_SearchHistory_Diffing = Retrieving files...
+# {0} - filename
 MSG_SummaryView.refersToDirectory={0} refers to a directory, cannot rollback
 
 CTL_Action_Revert = Revert
 CTL_Action_Diff = Diff
 
+# {0} - revision number
 CTL_Action_RollbackTo = Rollback to {0}
 CTL_Action_RollbackChange = Rollback Changes
 CTL_Rollback_Title = Confirm Rollback
+# {0} - filename
+# {1} - revision number
 CTL_Rollback_Prompt = Do you want to overwrite file "{0}" with revision {1}?
 
+# {0} - number of selected projects
 CTL_FindAssociateChanges_OpenProjects_Title = {0} Projects
 
 LBL_DiffTree_Column_Name = File Revision
@@ -152,6 +156,7 @@ MSG_Search_ResolvingTagProgress=Resolving tag URL...
 MSG_Search_Progress=Searching History...
 MSG_Revert_Progress=Reverting...
 MSG_Rollback_Progress=Rolling Back...
+# {0} - number of changes
 LBL_NumberOfChangedPaths = \ ({0} changes)
 
 LBL_Diff_Anonymous=anonymous
