--- a/javafx2.samples/src/org/netbeans/modules/javafx2/samples/Bundle.properties
+++ b/javafx2.samples/src/org/netbeans/modules/javafx2/samples/Bundle.properties
@@ -106,5 +106,6 @@ LBL_NWP1_SelectProjectLocation=Select Project Location
 MSG_IllegalProjectName=Project Name is not valid folder name.
 MSG_ProjectFolderExists=Project Folder already exists and is not empty.
 LBL_Platform_ComboBox=JavaFX Platform:
-WARN_PanelOptionsVisual.notFXPlatform=<html><b>Selected Java platform does not have JavaFX support.</b><br>Please create new Java Platform and point it to JavaFX SDK.<br>JavaFX SDK can be downloaded from <a href='http://www.oracle.com/technetwork/java/javafx/downloads'>JavaFX website</a>.<html>
+WARN_PanelOptionsVisual.creatingDefaultFXPlatform=<html><b>No JavaFX Platform found.</b><br>Attempting to create a default JavaFX Platform automatically, please wait...<html>
+WARN_PanelOptionsVisual.notFXPlatform=<html><b>Failed to find a JavaFX Platform.</b><br>Please create a non-default Java SE platform, then go to the JavaFX tab,<br>enable JavaFX and fill in the paths to JavaFX SDK and JavaFX RT.<br>JavaFX SDK can be downloaded from <a href='http://www.oracle.com/technetwork/java/javafx/downloads'>JavaFX website</a>.<html>
 LBL_PanelOptions_Manage_Button=Manage Platforms...
