--- a/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/api/execution/Bundle.properties
+++ b/dlight.nativeexecution/src/org/netbeans/modules/nativeexecution/api/execution/Bundle.properties
@@ -52,7 +52,7 @@ TERMINATED={0} TERMINATED
 FAILED={0} FAILED
 TOTAL_TIME=total time:{0}
 # The following string should be translated; it's meaning is: "Exit code is ..."
-EXIT_VALUE=exit value {0},
+EXIT_VALUE=exit value {0}
 
 # PostMessageDisplayer.Default formatTime
 
