#212305 - [T13y] Placeholders need explanation

--- a/mercurial/src/org/netbeans/modules/mercurial/Bundle.properties
+++ b/mercurial/src/org/netbeans/modules/mercurial/Bundle.properties
@@ -80,11 +80,6 @@ CTL_FileInfoStatus_Conflict_Short = Conflict
 
 textAnnotation = <font color="#999999">{0}</font> 
 
-CTL_PopupMenuItem_Create = Initialize &Mercurial Project
-CTL_PopupMenuItem_CloneOther = Clone Ot&her...
-CTL_PopupMenuItem_CloneLocal = Cl&one - {0}
-CTL_PopupMenuItem_CloneRepository = Cl&one - Selected Repository...
-
 CTL_PopupMenuItem_Status = S&tatus
 CTL_PopupMenuItem_Diff = &Diff
 CTL_PopupMenuItem_Update = &Update...
@@ -135,6 +130,8 @@ MSG_VERSION_NONE_MSG = Mercurial could not be found.\nNo Mercurial commands can 
 # Capitalized letters used intentionally to emphasize the words in an output window, should be translated
 MSG_VERSION_NONE_OUTPUT_MSG = INFO: Mercurial could not be found.\nNo Mercurial commands can be executed.
 MSG_USING_UNRECOGNIZED_VERSION_MSG = INFO: Using unrecognized version {0} of Mercurial.
+# description of the running task displayed in the progress bar
+# {0} - name of the running task. Can be anything
 LBL_Queued = {0} (Queued)
 
 MSG_Contains_Modified_Locally = Contains new, modified or deleted files 
@@ -147,12 +144,24 @@ CTL_ActionCanceled_Title = Action cancelled
 MSG_ParsingError=The configuration file has an unsupported format and can not be loaded.\nYou can find more information in the IDE log file.
 LBL_ParsingError=Unsupported format
 # initial letter is not capitalized, separate part of the annotation next to a node name in the Project view 
+# {0} - first revision
+# {1} - second revision
 LBL_Annotator.label.merged.twoBranches=merged {0} {1}
 # initial letter is not capitalized, separate part of the annotation next to a node name in the Project view 
+# {0} - first revision id
+# {1} - second revision id
+# {2} - branch the merge was made in
 LBL_Annotator.label.merged.oneBranch=merged {0} {1} in {2}
 LBL_Annotator.currentBranch.toolTip=Working on branch \"{0}\"
+# {0} - first branch
+# {1} - second branch
 LBL_Annotator.mergeNeeded.twoBranches.toolTip=Commit is needed after merge of: {0} {1}
+# {0} - first revision id
+# {1} - second revision id
+# {2} - branch the merge was made in
 LBL_Annotator.mergeNeeded.oneBranch.toolTip=Commit is needed after merge of: {0} {1} in {2}
 
 LBL_LookingUp=Looking up moved file...
+# {0} - filename
+# {1} - revision id
 LBL_LookingUpAtRevision=Looking up moved file {0} at revision {1}
