--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -228,9 +228,9 @@ JFXRunPanel.buttonPreloader.AccessibleContext.accessibleName=Browse&...
 JFXRunPanel.buttonPreloaderDefault.AccessibleContext.accessibleName=De&fault
 JFXRunPanel.labelRunAs.AccessibleContext.accessibleDescription=Select Run Type
 JFXRunPanel.labelRunAs.AccessibleContext.accessibleName=Run:
-JFXRunPanel.radioButtonSA.AccessibleContext.accessibleName=&Standalone
-JFXRunPanel.radioButtonBE.AccessibleContext.accessibleName=in &Browser
-JFXRunPanel.radioButtonWS.AccessibleContext.accessibleName=as &Web Start
+JFXRunPanel.radioButtonSA.AccessibleContext.accessibleName=Run Standalone
+JFXRunPanel.radioButtonBE.AccessibleContext.accessibleName=Run in Browser
+JFXRunPanel.radioButtonWS.AccessibleContext.accessibleName=Run as WebStart
 JFXRunPanel.labelSAProps.AccessibleContext.accessibleDescription=N/A
 JFXRunPanel.labelSAProps.AccessibleContext.accessibleName=Standalone Application Properties
 JFXRunPanel.labelWorkDir.AccessibleContext.accessibleName=Working D&irectory:
