Issue #212303 - [T13y] Concatenation or explanation in comment needed

--- a/localhistory/src/org/netbeans/modules/localhistory/ui/view/Bundle.properties
+++ b/localhistory/src/org/netbeans/modules/localhistory/ui/view/Bundle.properties
@@ -37,6 +37,7 @@ MSG_DiffPanel_NoVersion = <Diff - No Version Selected>
 
 CTL_ShowHistory=Show &History
 
+# {file_name} [Local History]
 CTL_LocalHistoryTopComponent={0} [Local History]
 
 CTL_SourceTabCaption=&History
@@ -52,15 +53,9 @@ LBL_AllRevisionsFilter=All
 LBL_ByUserFilter=User
 LBL_ByMsgFilter=Message
 
-LBL_Today=Today {0}
-LBL_Yesterday=Yesterday {0}
-LBL_LoadNext=Load next
-
 LBL_Local=Local
 LBL_PreparingDiff=Preparing diff, please wait ...
 
-LBL_FromVCS=from {0}
-LBL_LoadingFrom=Loading history from {0} ...
 LBL_AllRevisions=All Revisions
 
 LBL_LoadAll=Load all
