--- a/versioning.ui/src/org/netbeans/modules/versioning/ui/options/Bundle.properties
+++ b/versioning.ui/src/org/netbeans/modules/versioning/ui/options/Bundle.properties
@@ -55,14 +55,12 @@ ACSN_LocalHistoryOptionsPanel.daysTextField.text=Keep Local History Files
 ACSD_LocalHistoryOptionsPanel.daysTextField.text=Specifies for how many days will be old versions kept in the history
 HistoryOptionsPanel.warningLabel.text=Must be a whole number
 HistoryOptionsPanel.noLabelCleanupCheckBox.text=Only remove revisions without a &label
-HistoryOptionsPanel.daysLabel2.text=days
 HistoryOptionsPanel.jLabel1.text=Local History
 HistoryOptionsPanel.jLabel2.text=Versioning History
-HistoryOptionsPanel.jLabel4.text=days
 HistoryOptionsPanel.olderThanDaysTextField.text=
 HistoryOptionsPanel.daysIncrementTextField.text=
-HistoryOptionsPanel.loadIncrementsRadioButton.text=&Increments for loading revisions:
+HistoryOptionsPanel.loadIncrementsRadioButton.text=&Increments for loading revisions (number of days):
 HistoryOptionsPanel.loadAllRadioButton.text=Load &all revisions
-HistoryOptionsPanel.keepForeverRadioButton.text=&Never remove Local History files
-HistoryOptionsPanel.removeOlderRadioButton.text=&Remove Local History files older than
+HistoryOptionsPanel.keepForeverRadioButton.text=&Never remove Local History files 
+HistoryOptionsPanel.removeOlderRadioButton.text=&Remove Local History files older than (number of days):
 
