Fix for BZ#210064 - org.netbeans.editor.GuardedException: Modification prohibited

--- a/websvc.rest/src/org/netbeans/modules/websvc/rest/client/Bundle.properties
+++ b/websvc.rest/src/org/netbeans/modules/websvc/rest/client/Bundle.properties
@@ -75,3 +75,4 @@ auth_session_key=SESSION KEY (Facebook, Flickr)
 auth_oauth=OAuth
 
 MSG_creatingRESTClient=REST Client Generation ...
+ERR_CannotApplyGuarded=Cannot apply changes due to guarded block
